--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -14,12 +14,12 @@
       <li><a href=""><img src="../dist/img/flower1.jpg" alt=""></a></li>
     </ul>
 
-<!--     <ul class="my-slider">
+    <ul class="my-slider">
       <li><a href=""><img src="../dist/img/flower1.jpg" alt=""></a></li>
       <li><a href=""><img src="../dist/img/flower1.jpg" alt=""></a></li>
       <li><a href=""><img src="../dist/img/flower1.jpg" alt=""></a></li>
       <li><a href=""><img src="../dist/img/flower1.jpg" alt=""></a></li>
-    </ul> -->
+    </ul>
 
 
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
