added slide animation

--- a/example/index.html
+++ b/example/index.html
@@ -7,19 +7,20 @@
 </head>
 <body>
 
-    <ul class="my-slider">
-      <li><a href=""><img src="../dist/img/flower1.jpg" alt=""></a></li>
-      <li><a href=""><img src="../dist/img/flower1.jpg" alt=""></a></li>
-      <li><a href=""><img src="../dist/img/flower1.jpg" alt=""></a></li>
-      <li><a href=""><img src="../dist/img/flower1.jpg" alt=""></a></li>
-    </ul>
 
     <ul class="my-slider">
-      <li><a href=""><img src="../dist/img/flower1.jpg" alt=""></a></li>
-      <li><a href=""><img src="../dist/img/flower1.jpg" alt=""></a></li>
-      <li><a href=""><img src="../dist/img/flower1.jpg" alt=""></a></li>
-      <li><a href=""><img src="../dist/img/flower1.jpg" alt=""></a></li>
+      <li><a href="">1<img src="../dist/img/flower1.jpg" alt=""></a></li>
+      <li><a href="">2<img src="../dist/img/flower1.jpg" alt=""></a></li>
+      <li><a href="">3<img src="../dist/img/flower1.jpg" alt=""></a></li>
+      <li><a href="">4<img src="../dist/img/flower1.jpg" alt=""></a></li>
     </ul>
+
+<!--     <ul class="my-slider">
+      <li><a href=""><img src="../dist/img/flower1.jpg" alt=""></a></li>
+      <li><a href=""><img src="../dist/img/flower1.jpg" alt=""></a></li>
+      <li><a href=""><img src="../dist/img/flower1.jpg" alt=""></a></li>
+      <li><a href=""><img src="../dist/img/flower1.jpg" alt=""></a></li>
+    </ul> -->
 
 
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
