--- a/example/index.html
+++ b/example/index.html
@@ -9,18 +9,29 @@
 
 
     <ul class="my-slider">
-      <li><a href="">1<img src="../dist/img/flower1.jpg" alt=""></a></li>
-      <li><a href="">2<img src="../dist/img/flower1.jpg" alt=""></a></li>
-      <li><a href="">3<img src="../dist/img/flower1.jpg" alt=""></a></li>
-      <li><a href="">4<img src="../dist/img/flower1.jpg" alt=""></a></li>
+      <li>1<img src="../dist/img/flower1.jpg" alt=""></li>
+      <li>3<img src="../dist/img/flower1.jpg" alt=""></li>
+      <li>4<img src="../dist/img/flower1.jpg" alt=""></li>
+      <li>2<img src="../dist/img/flower1.jpg" alt=""></li>
     </ul>
 
-<!--     <ul class="my-slider">
-      <li><a href=""><img src="../dist/img/flower1.jpg" alt=""></a></li>
-      <li><a href=""><img src="../dist/img/flower1.jpg" alt=""></a></li>
-      <li><a href=""><img src="../dist/img/flower1.jpg" alt=""></a></li>
-      <li><a href=""><img src="../dist/img/flower1.jpg" alt=""></a></li>
-    </ul> -->
+    <!--<a href="" id="add">add</a>-->
+    <!--<a href="" id="remove">remove</a>-->
+
+    <div class="dev-wrapper">
+        <p><b>Publick API:</b></p>
+        <a href="" id="prevTo">prevTo</a>
+        <a href="" id="nextTo">nextTo</a>
+    </div>
+
+
+    <!--<br/><br/>-->
+    <!--<ul class="my-slider">-->
+        <!--<li>1<img src="../dist/img/flower1.jpg" alt=""></li>-->
+        <!--<li>3<img src="../dist/img/flower1.jpg" alt=""></li>-->
+        <!--<li>4<img src="../dist/img/flower1.jpg" alt=""></li>-->
+        <!--<li>2<img src="../dist/img/flower1.jpg" alt=""></li>-->
+    <!--</ul>-->
 
 
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
