added new features: stop, play, auto, pause on hover.

--- a/example/index.html
+++ b/example/index.html
@@ -22,19 +22,21 @@
         <p><b>Publick API:</b></p>
         <a href="" id="prevTo">prevTo</a>
         <a href="" id="nextTo">nextTo</a>
+        <a href="" id="pause">pause</a>
+        <a href="" id="play">play</a>
     </div>
 
 
-    <!--<br/><br/>-->
-    <!--<ul class="my-slider">-->
-        <!--<li>1<img src="../dist/img/flower1.jpg" alt=""></li>-->
-        <!--<li>3<img src="../dist/img/flower1.jpg" alt=""></li>-->
-        <!--<li>4<img src="../dist/img/flower1.jpg" alt=""></li>-->
-        <!--<li>2<img src="../dist/img/flower1.jpg" alt=""></li>-->
-    <!--</ul>-->
+    <br/><br/>
+<!--     <ul class="my-slider">
+        <li>1<img src="../dist/img/flower1.jpg" alt=""></li>
+        <li>3<img src="../dist/img/flower1.jpg" alt=""></li>
+        <li>4<img src="../dist/img/flower1.jpg" alt=""></li>
+        <li>2<img src="../dist/img/flower1.jpg" alt=""></li>
+    </ul> -->
 
 
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="../assets/js/jquery.min.js"></script>
   <script src="../dist/js/deviora.js"></script>
 </body>
 </html>
