--- a/example/index.html
+++ b/example/index.html
@@ -24,6 +24,7 @@
         <a href="" id="nextTo">nextTo</a>
         <a href="" id="pause">pause</a>
         <a href="" id="play">play</a>
+        <a href="" id="goToSlide">goToSlide</a> <input type="number" id="valueGoToSlide" value="0" style="width: 30px;">
     </div>
 
 
