added preloader images

--- a/example/simple.html
+++ b/example/simple.html
@@ -9,22 +9,20 @@
 
 
   <ul class="my-slider">
-    <li>1<img src="../dist/img/flower1.jpg" alt=""></li>
-    <li>2<img src="../dist/img/flower1.jpg" alt=""></li>
-    <li>3<img src="../dist/img/flower1.jpg" alt=""></li>
+    <li>1<img src="http://bxslider.com/images/730_200/hill_trees.jpg" alt=""></li>
+    <li>2<img src="http://bxslider.com/images/730_200/me_trees.jpg" alt=""></li>
+    <li>3<img src="http://bxslider.com/images/730_200/houses.jpg" alt=""></li>
     <li>4<img src="../dist/img/flower1.jpg" alt=""></li>
   </ul>
 
-    <!--<a href="" id="add">add</a>-->
-    <!--<a href="" id="remove">remove</a>-->
-
-    <div class="dev-wrapper">
+    <div class="dev-wrapper pubApi">
         <p><b>Publick API:</b></p>
         <a href="" id="prevTo">prevTo</a>
         <a href="" id="nextTo">nextTo</a>
         <a href="" id="pause">pause</a>
         <a href="" id="play">play</a>
         <a href="" id="goToSlide">goToSlide</a> <input type="number" id="valueGoToSlide" value="0" style="width: 30px;">
+        <!-- <a href="" id="destroy">destroy</a> -->
     </div>
 
 
