added circle timer

--- a/example/simple.html
+++ b/example/simple.html
@@ -9,10 +9,30 @@
 
 
   <ul class="my-slider">
-    <li>1<img src="http://bxslider.com/images/730_200/hill_trees.jpg" alt=""></li>
-    <li>2<img src="http://bxslider.com/images/730_200/me_trees.jpg" alt=""></li>
-    <li>3<img src="http://bxslider.com/images/730_200/houses.jpg" alt=""></li>
-    <li>4<img src="../dist/img/flower1.jpg" alt=""></li>
+    <li>
+        <div class="dev-block">
+            <div class="dev-text">1</div>
+            <img src="../dist/img/flower1.jpg" alt="">
+        </div>
+    </li>
+    <li>
+        <div class="dev-block">
+            <div class="dev-text">2</div>
+            <img src="../dist/img/flower1.jpg" alt="">
+        </div>
+    </li>
+    <li>
+        <div class="dev-block">
+            <div class="dev-text">3</div>
+            <img src="../dist/img/flower1.jpg" alt="">
+        </div>
+    </li>
+    <li>
+        <div class="dev-block">
+            <div class="dev-text">3</div>
+            <img src="../dist/img/flower1.jpg" alt="">
+        </div>
+    </li>
   </ul>
 
     <div class="dev-wrapper pubApi">
@@ -24,6 +44,10 @@
         <a href="" id="goToSlide">goToSlide</a> <input type="number" id="valueGoToSlide" value="0" style="width: 30px;">
         <!-- <a href="" id="destroy">destroy</a> -->
     </div>
+    <div class="dev-wrapper">
+        <button class="btn">okaaay</button>
+    </div>
+
 
 
     <br/><br/>
@@ -33,6 +57,8 @@
         <li>4<img src="../dist/img/flower1.jpg" alt=""></li>
         <li>2<img src="../dist/img/flower1.jpg" alt=""></li>
     </ul> -->
+
+
 
 
   <script src="../assets/js/jquery.min.js"></script>
