add fullScreen mode

--- a/example/simple.html
+++ b/example/simple.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 
+<div class="my-header">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem illo maxime aspernatur iure repellendus aliquid veritatis quia nemo animi explicabo!
+</div>
 
   <ul class="my-slider">
     <li>
@@ -18,7 +21,7 @@
     <li>
         <div class="dev-block">
             <div class="dev-text">2</div>
-            <img src="../dist/img/flower1.jpg" alt="">
+            <img src="http://bxslider.com/images/home_slides/hillside.jpg" alt="">
         </div>
     </li>
     <li>
@@ -42,15 +45,9 @@
         <a href="" id="pause">pause</a>
         <a href="" id="play">play</a>
         <a href="" id="goToSlide">goToSlide</a> <input type="number" id="valueGoToSlide" value="0" style="width: 30px;">
-        <!-- <a href="" id="destroy">destroy</a> -->
-    </div>
-    <div class="dev-wrapper">
-        <button class="btn">okaaay</button>
     </div>
 
 
-
-    <br/><br/>
 <!--     <ul class="my-slider">
         <li>1<img src="../dist/img/flower1.jpg" alt=""></li>
         <li>3<img src="../dist/img/flower1.jpg" alt=""></li>
