fix bugs, added part touch sliding

--- a/example/simple.html
+++ b/example/simple.html
@@ -11,7 +11,7 @@
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem illo maxime aspernatur iure repellendus aliquid veritatis quia nemo animi explicabo!
 </div>
 
-  <ul class="my-slider">
+  <!-- <ul class="my-slider">
     <li>
         <div class="dev-block">
             <div class="dev-text">1</div>
@@ -36,7 +36,34 @@
             <img src="../dist/img/flower1.jpg" alt="">
         </div>
     </li>
-  </ul>
+  </ul> -->
+
+      <ul class="my-slider">
+        <li>
+            <div class="dev-block">
+                <div class="dev-text">1</div>
+                <img src="../dist/img/flower1.jpg" alt="" style="height: 200px;">
+            </div>
+        </li>
+        <li>
+            <div class="dev-block">
+                <div class="dev-text">2</div>
+                <img src="http://bxslider.com/images/home_slides/hillside.jpg" alt="" style="height: 150px;">
+            </div>
+        </li>
+        <li>
+            <div class="dev-block">
+                <div class="dev-text">3</div>
+                <img src="../dist/img/flower1.jpg" alt="" style="height: 180px;">
+            </div>
+        </li>
+        <li>
+            <div class="dev-block">
+                <div class="dev-text">4</div>
+                <img src="../dist/img/flower1.jpg" alt="" style="height: 220px;">
+            </div>
+        </li>
+      </ul>
 
     <div class="dev-wrapper pubApi">
         <p><b>Publick API:</b></p>
@@ -46,14 +73,6 @@
         <a href="" id="play">play</a>
         <a href="" id="goToSlide">goToSlide</a> <input type="number" id="valueGoToSlide" value="0" style="width: 30px;">
     </div>
-
-
-<!--     <ul class="my-slider">
-        <li>1<img src="../dist/img/flower1.jpg" alt=""></li>
-        <li>3<img src="../dist/img/flower1.jpg" alt=""></li>
-        <li>4<img src="../dist/img/flower1.jpg" alt=""></li>
-        <li>2<img src="../dist/img/flower1.jpg" alt=""></li>
-    </ul> -->
 
 
 
