--- a/example/simple.html
+++ b/example/simple.html
@@ -42,7 +42,7 @@
         <li>
             <div class="dev-block">
                 <div class="dev-text">1</div>
-                <img src="../dist/img/flower1.jpg" alt="" style="height: 200px;">
+                <img src="http://bxslider.com/images/home_slides/hillside.jpg" alt="" style="height: 200px;">
             </div>
         </li>
         <li>
