fixed bugs, rebuild structure

--- a/example/simple.html
+++ b/example/simple.html
@@ -11,7 +11,7 @@
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem illo maxime aspernatur iure repellendus aliquid veritatis quia nemo animi explicabo!
 </div>
 
-  <!-- <ul class="my-slider">
+  <ul class="my-slider">
     <li>
         <div class="dev-block">
             <div class="dev-text">1</div>
@@ -36,9 +36,9 @@
             <img src="../dist/img/flower1.jpg" alt="">
         </div>
     </li>
-  </ul> -->
+  </ul>
 
-      <ul class="my-slider">
+<!--       <ul class="my-slider">
         <li>
             <div class="dev-block">
                 <div class="dev-text">1</div>
@@ -63,10 +63,10 @@
                 <img src="../dist/img/flower1.jpg" alt="" style="height: 220px;">
             </div>
         </li>
-      </ul>
+      </ul> -->
 
     <div class="dev-wrapper pubApi">
-        <p><b>Publick API:</b></p>
+        <p><b>Public API:</b></p>
         <a href="" id="prevTo">prevTo</a>
         <a href="" id="nextTo">nextTo</a>
         <a href="" id="pause">pause</a>
