Added styles, responsive, mouseEnter, mouseLeave, gestures. Some refactoring

--- a/example/simple.html
+++ b/example/simple.html
@@ -21,7 +21,7 @@
     <li>
         <div class="dev-block">
             <div class="dev-text">2</div>
-            <img src="http://bxslider.com/images/home_slides/hillside.jpg" alt="">
+            <img src="../dist/img/flower1.jpg" alt="">
         </div>
     </li>
     <li>
