added styles, rebuild structure

--- a/example/simple.html
+++ b/example/simple.html
@@ -7,77 +7,51 @@
 </head>
 <body>
 
-<div class="my-header">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem illo maxime aspernatur iure repellendus aliquid veritatis quia nemo animi explicabo!
-</div>
+    <div class="my-header">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem illo maxime aspernatur iure repellendus aliquid veritatis quia nemo animi explicabo!
+    </div>
 
-  <ul class="my-slider">
-    <li>
-        <div class="dev-block">
-            <div class="dev-text">1</div>
-            <img src="../dist/img/flower1.jpg" alt="">
-        </div>
-    </li>
-    <li>
-        <div class="dev-block">
-            <div class="dev-text">2</div>
-            <img src="../dist/img/flower1.jpg" alt="">
-        </div>
-    </li>
-    <li>
-        <div class="dev-block">
-            <div class="dev-text">3</div>
-            <img src="../dist/img/flower1.jpg" alt="">
-        </div>
-    </li>
-    <li>
-        <div class="dev-block">
-            <div class="dev-text">4</div>
-            <img src="../dist/img/flower1.jpg" alt="">
-        </div>
-    </li>
-  </ul>
-
-<!--       <ul class="my-slider">
+    <ul class="my-slider">
         <li>
             <div class="dev-block">
                 <div class="dev-text">1</div>
-                <img src="http://bxslider.com/images/home_slides/hillside.jpg" alt="" style="height: 200px;">
+                <img src="../dist/img/flower1.jpg" alt="">
             </div>
         </li>
         <li>
             <div class="dev-block">
                 <div class="dev-text">2</div>
-                <img src="http://bxslider.com/images/home_slides/hillside.jpg" alt="" style="height: 150px;">
+                <img src="../dist/img/flower1.jpg" alt="">
             </div>
         </li>
         <li>
             <div class="dev-block">
                 <div class="dev-text">3</div>
-                <img src="../dist/img/flower1.jpg" alt="" style="height: 180px;">
+                <img src="../dist/img/flower1.jpg" alt="">
             </div>
         </li>
         <li>
             <div class="dev-block">
                 <div class="dev-text">4</div>
-                <img src="../dist/img/flower1.jpg" alt="" style="height: 220px;">
+                <img src="../dist/img/flower1.jpg" alt="">
             </div>
         </li>
-      </ul> -->
+    </ul>
 
-    <div class="dev-wrapper pubApi">
+<!--     <div class="dev-wrapper pubApi">
         <p><b>Public API:</b></p>
         <a href="" id="prevTo">prevTo</a>
         <a href="" id="nextTo">nextTo</a>
         <a href="" id="pause">pause</a>
         <a href="" id="play">play</a>
         <a href="" id="goToSlide">goToSlide</a> <input type="number" id="valueGoToSlide" value="0" style="width: 30px;">
-    </div>
+    </div> -->
 
 
 
 
   <script src="../assets/js/jquery.min.js"></script>
   <script src="../dist/js/deviora.js"></script>
+  <script src="../dist/js/main.js"></script>
 </body>
 </html>
