--- a/example/simple.html
+++ b/example/simple.html
@@ -8,14 +8,14 @@
 <body>
 
     <div class="my-header">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem illo maxime aspernatur iure repellendus aliquid veritatis quia nemo animi explicabo!
+        <h1>Deviora</h1>
     </div>
 
     <ul class="my-slider">
         <li>
             <div class="dev-block">
                 <div class="dev-text">1</div>
-                <img src="../dist/img/flower1.jpg" alt="">
+                <img src="http://xdan.ru/images/joomla/modules/suff/second/nicewallpaper.jpg" alt="">
             </div>
         </li>
         <li>
@@ -38,20 +38,18 @@
         </li>
     </ul>
 
-<!--     <div class="dev-wrapper pubApi">
-        <p><b>Public API:</b></p>
+     <div class="dev-wrapper pubApi">
+        <b>Public API:</b><br>
         <a href="" id="prevTo">prevTo</a>
         <a href="" id="nextTo">nextTo</a>
         <a href="" id="pause">pause</a>
         <a href="" id="play">play</a>
         <a href="" id="goToSlide">goToSlide</a> <input type="number" id="valueGoToSlide" value="0" style="width: 30px;">
-    </div> -->
+    </div>
 
 
-
-
-  <script src="../assets/js/jquery.min.js"></script>
-  <script src="../dist/js/deviora.js"></script>
-  <script src="../dist/js/main.js"></script>
+    <script src="../assets/js/jquery.min.js"></script>
+    <script src="../dist/js/deviora.js"></script>
+    <script src="../dist/js/main.js"></script>
 </body>
 </html>
