added animation random, rebuild sass files

--- a/example/simple.html
+++ b/example/simple.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>DevioraSlider</title>
-  <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../dist/css/bootstrap.css">
   <link rel="stylesheet" href="../dist/css/style.css">
 </head>
 <body>
@@ -53,8 +53,6 @@
 
         <a href="http://github.com/realgvard/devslider" target="blank">Open in new tab</a>
 
-        <div class="space40"></div>
-
         <h4 class="page-header">Public API:</h4>
 
         <a href="" id="prevTo">prevTo</a>
@@ -63,7 +61,7 @@
         <a href="" id="play">play</a>
         <a href="" id="goToSlide">goToSlide</a> <input type="number" id="valueGoToSlide" value="0" style="width: 30px;">
 
-        <div class="space100"></div>
+        <div class="space40"></div>
     </div>
 
 
