--- a/example/simple.html
+++ b/example/simple.html
@@ -15,7 +15,7 @@
     <ul class="fullSizeSlider">
         <li>
             <div class="ui-slide-block">
-                <img src="../dist/img/image_1.jpg" alt="">
+                <img src="https://assetcdn.500px.org/assets/home/home_cover-22d4c02977bbe00636e22f9aa653bd84.jpg" alt="">
             </div>
             <div class="ui-content-slider-block">
                 <div class="ui-content-slider-text">
