change setup background img on each slide

--- a/example/index.html
+++ b/example/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <!-- <meta name="viewport" content="width=device-width,initial-scale=1"> -->
   <title>DevioraSlider</title>
   <link rel="stylesheet" href="../dist/css/scaffold/bootstrap.css">
   <link rel="stylesheet" href="../dist/css/style.css">
@@ -14,9 +15,11 @@
 
     <ul class="fullSizeSlider">
         <li>
-            <div class="ui-slide-block">
-                <img src="../dist/img/image_1.jpg" alt="">
-            </div>
+            <!-- MAIN IMAGE -->
+            <img src="../dist/img/image_1.jpg" alt="image_1" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat">
+            <!-- LAYERS -->
+
+            <!-- LAYER -->
             <div class="ui-content-slider-block">
                 <div class="ui-content-slider-text">
                     <h3>Deviora Slider</h3>
@@ -25,9 +28,11 @@
             </div>
         </li>
         <li>
-            <div class="ui-slide-block">
-                <img src="../dist/img/image_2.jpg" alt="">
-            </div>
+            <!-- MAIN IMAGE -->
+            <img src="../dist/img/image_2.jpg" alt="image_2" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat">
+            <!-- LAYERS -->
+
+            <!-- LAYER -->
             <div class="ui-content-slider-block">
                 <div class="ui-content-slider-text">
                     <h3>Ken burns</h3>
@@ -36,9 +41,11 @@
             </div>
         </li>
         <li>
-            <div class="ui-slide-block">
-                <img src="../dist/img/image_3.jpg" alt="">
-            </div>
+            <!-- MAIN IMAGE -->
+            <img src="../dist/img/image_3.jpg" alt="image_3" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat">
+            <!-- LAYERS -->
+
+            <!-- LAYER -->
             <div class="ui-content-slider-block">
                 <div class="ui-content-slider-text">
                     <h3>All these features</h3>
@@ -109,7 +116,7 @@
                     </tr>
                     <tr>
                         <th class='text-emp'>fullScreen</th>
-                        <td>false</td>
+                        <td>true</td>
                         <td>Bool</td>
                         <td>..</td>
                     </tr>
@@ -181,7 +188,7 @@
                     </tr>
                     <tr>
                         <th class='text-emp'>kenBurn</th>
-                        <td>false</td>
+                        <td>true</td>
                         <td>Bool</td>
                         <td>..</td>
                     </tr>
@@ -336,7 +343,7 @@
                 <dt>Can i ask for a new functionality?</dt>
                 <dd>Yes! Use <a href="http://github.com/realgvard/devslider">Github</a></dd>
                 <dt>I need help!</dt>
-                <dd>Send me an <a href="mailto:realgvard@gmail.com?subject=Hey Deviora slider! I need help">email</a>, visit <a href="http://github.com/realgvard/devslider">Github</a> or add comment <a href="#disqus">below.</a><br>Don't forget to add link to your demo/example website!</dd>
+                <dd>Send me an <a href="mailto:realgvard@gmail.com?subject=Hey Deviora slider! I need help">email</a>, visit <a href="http://github.com/realgvard/devslider">Github</a><br>Don't forget to add link to your demo/example website!</dd>
                 <!-- <dt>Does it has infinity scroll/circle/loop slides?</dt>
                 <dd>Only new version 2.x.x has it. <a href="http://www.owlgraphic.com/owlcarousel2/">Check it</a></dd>
                 <dt>What's new in latest release?</dt>
