added comment, change text in markup

--- a/example/index.html
+++ b/example/index.html
@@ -123,7 +123,7 @@
                     <tr>
                         <th class='text-emp'>fullScreenOffsetY</th>
                         <td>0</td>
-                        <td>jQuery selector / Number / String</td>
+                        <td>jQuery Object / Number / String</td>
                         <td>..</td>
                     </tr>
                     <tr>
@@ -237,7 +237,7 @@
                     <tr>
                         <th class='text-emp'>preloader</th>
                         <td>null</td>
-                        <td>jQuery selector / null</td>
+                        <td>jQuery Object / null</td>
                         <td>..</td>
                     </tr>
                 </tbody>
