--- a/example/index.html
+++ b/example/index.html
@@ -13,7 +13,7 @@
         <h1>Deviora <small>slider</small></h1>
     </div>
 
-    <ul class="fullSizeSlider">
+    <ul class="fullSizeSlider" style="opacity: 0;">
         <li>
             <!-- MAIN IMAGE -->
             <img src="../dist/img/image_1.jpg" alt="image_1" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat">
@@ -56,8 +56,9 @@
     </ul>
 
     <div class="ui-main-container">
+        <div class="space40"></div>
+
         <div class="container">
-            <div class="space40"></div>
             <h1>Customizing</h1>
 
             <h2>1. Options</h2>
@@ -336,6 +337,8 @@
             <dl>
                 <dt>Can i use it for free?</dt>
                 <dd>Yes!</dd>
+                <dt>How much space it takes up ?</dt>
+                <dd>Only 19 kb !</dd>
                 <dt>Can i use it for ecommerce?</dt>
                 <dd>Yes!</dd>
                 <dt>Has it any licence?</dt>
@@ -344,10 +347,6 @@
                 <dd>Yes! Use <a href="http://github.com/realgvard/devslider">Github</a></dd>
                 <dt>I need help!</dt>
                 <dd>Send me an <a href="mailto:realgvard@gmail.com?subject=Hey Deviora slider! I need help">email</a>, visit <a href="http://github.com/realgvard/devslider">Github</a><br>Don't forget to add link to your demo/example website!</dd>
-                <!-- <dt>Does it has infinity scroll/circle/loop slides?</dt>
-                <dd>Only new version 2.x.x has it. <a href="http://www.owlgraphic.com/owlcarousel2/">Check it</a></dd>
-                <dt>What's new in latest release?</dt>
-                <dd>See <a href="changelog.html">Changelog</a></dd> -->
             </dl>
         </div>
 
@@ -356,9 +355,18 @@
 
 
 
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-    <script src="../assets/js/jquery.min.js"></script>
-    <script src="../dist/js/deviora.js"></script>
-    <script src="../dist/js/loader.js"></script>
+      ga('create', 'UA-77754557-1', 'auto');
+      ga('send', 'pageview');
+    </script>
+
+    <script defer src="../assets/js/vendor/jquery.min.js"></script>
+    <script defer src="../assets/js/deviora.js"></script>
+    <script defer src="../assets/js/loader.js"></script>
 </body>
 </html>
